--- a/InventoryManager/NewFolder1/Requirements.html
+++ b/InventoryManager/NewFolder1/Requirements.html
@@ -3,9 +3,16 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title> Requirements Page</title>
 </head>
 <body>
+    <h3> Inventory System Requirements</h3>
+    <ol>
+        <li>Name: <br> Type: <br> Summary: </li>
+        <li>Name: <br> Type: <br> Summary: </li>
+        <li>Name: <br> Type: <br> Summary: </li>
+        <li>Name: <br> Type: <br> Summary: </li>
+    </ol>
 
 </body>
 </html>
