--- a/InventoryManager/NewFolder1/Requirements.html
+++ b/InventoryManager/NewFolder1/Requirements.html
@@ -58,7 +58,7 @@
                     Summary: Will only accept .txt files</li>
                 <li>Type: Constraint <br />
                     Summary: Will ensure sufficient stock on hand to fulfil order <br />
-                    Note: </li>
+                    Note: Need to determine exactly how to handle insufficient stock. </li>
                 <li>Type: Constraint <br />
                     Summary: Convert to a new format to be read by employee interface</li>
                 <li>Type: Constraint <br />
